--- a/autres.html
+++ b/autres.html
@@ -23,6 +23,50 @@
   <div class="othersLine">
     <!--Autres 1-->
     <figure>
+      <a href="https://shop.vitality.gg/products/copie-de-maillot-officiel-team-vitality-floque?variant=29051376959606" target="_blank"> <img src="https://cdn.shopify.com/s/files/1/0049/2293/3366/products/FR_Face_1024x1024.png?v=1560698170"
+          alt="Vitality" class="others" /></a>
+      <figcaption>
+        Maillot Vitality blanc
+      </figcaption>
+      <figcaption>
+        Edition limitée
+      </figcaption>
+      <figcaption>
+        XXL
+      </figcaption>
+      <figcaption>
+        Flocage Siamja
+      </figcaption>
+      <figcaption>
+        79,99€
+      </figcaption>
+    </figure>-->
+
+    <!--Autres 2-->
+    <figure>
+      <a href="https://shop.vitality.gg/products/casquette-team-vitality-1" target="_blank"> <img src="https://cdn.shopify.com/s/files/1/0049/2293/3366/products/2019-casquette-02_600x800.jpg?v=1550850258" alt="Casquette Vitality"
+          class="others" /></a>
+      <figcaption>
+        Casquette Vitality
+      </figcaption>
+      <figcaption>
+        24,99€
+      </figcaption>
+    </figure>
+
+    <!--Autres 3-->
+    <figure>
+      <a href="https://shop.vitality.gg/products/porte-cles-team-vitality" target="_blank"> <img src="https://cdn.shopify.com/s/files/1/0049/2293/3366/products/portecle_600x800.jpg?v=1540291632" alt="Porte Clé Vitality" class="others" /></a>
+      <figcaption>
+        Porte Clé Vitality
+      </figcaption>
+      <figcaption>
+        8,99€
+      </figcaption>
+    </figure>
+
+    <!--Autres 4-->
+    <figure>
       <a href="https://shop.gotaga.tv/collections/accessoires/products/snapback-dark" target="_blank"> <img src="https://cdn.shopify.com/s/files/1/0045/8230/9955/products/Copie_de_Copie_de_Copie_de_DSC01555_2048x2048.jpg?v=1549309086"
           alt="Casquette Gotaga" class="others" /></a>
       <figcaption>
@@ -35,8 +79,10 @@
         Ruptude de Stock
       </figcaption>
     </figure>
+  </div>
 
-    <!--Autres 2-->
+  <div class="othersLine">
+    <!--Autres 5-->
     <figure>
       <a href="https://www.amazon.fr/Esprits-criminels-Saison-Joe-Mantegna/dp/B07HSLVBVC/ref=zg_bs_409468_27?_encoding=UTF8&psc=1&refRID=5RWEYV0XDWDRY795M84Q" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/61AQaz9ykmL._SL1000_.jpg" alt="Esprit Criminels - Saison 13" class="others" /></a>
@@ -51,7 +97,7 @@
       </figcaption>
     </figure>
 
-    <!--Autres 3-->
+    <!--Autres 6-->
     <figure>
       <a href="https://www.amazon.fr/Friends-lInt%C3%A9grale-Saisons-Coffret-Blu-Ray/dp/B008HQCPCU/ref=cm_cr_arp_d_product_top?ie=UTF8" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/919CzxAoKRL._SL1500_.jpg"
           alt="Friends - L'intégrale" class="others" /></a>
@@ -63,48 +109,6 @@
       </figcaption>
       <figcaption>
         53,99€
-      </figcaption>
-    </figure>
-
-    <!--Autres 4
-    <figure>
-      <a href="https://www.nbastore.eu/stores/nba/fr/c/accessoires/souvenirs/bouteilles-&-gourdes" target="_blank"> <img src="http://img.fruugo.com/product/2/23/71374232_max.jpg" alt="Mug NBA" class="others" /></a>
-      <figcaption>
-        Tasses d'équipes NBA
-      </figcaption>
-      <figcaption>
-        Peu importe l'équipe
-      </figcaption>
-      <figcaption>
-        (Ma préférée Cleveland)
-      </figcaption>
-      <figcaption>
-        8,00€ la tasse
-      </figcaption>
-    </figure>-->
-  </div>
-
-  <div class="othersLine">
-    <!--Autres 5-->
-    <figure>
-      <a href="https://shop.vitality.gg/products/casquette-team-vitality-1" target="_blank"> <img src="https://cdn.shopify.com/s/files/1/0049/2293/3366/products/2019-casquette-02_600x800.jpg?v=1550850258" alt="Casquette Vitality"
-          class="others" /></a>
-      <figcaption>
-        Casquette Vitality
-      </figcaption>
-      <figcaption>
-        24,99€
-      </figcaption>
-    </figure>
-
-    <!--Autres 6-->
-    <figure>
-      <a href="https://shop.vitality.gg/products/porte-cles-team-vitality" target="_blank"> <img src="https://cdn.shopify.com/s/files/1/0049/2293/3366/products/portecle_600x800.jpg?v=1540291632" alt="Porte Clé Vitality" class="others" /></a>
-      <figcaption>
-        Porte Clé Vitality
-      </figcaption>
-      <figcaption>
-        8,99€
       </figcaption>
     </figure>
 
