--- a/livres.html
+++ b/livres.html
@@ -472,7 +472,6 @@
     </figure>
   </div>
 
-
   <div class="booksLine">
     <!--Livre 29-->
     <figure>
@@ -540,7 +539,6 @@
       </figcaption>
     </figure>
   </div>
-
 
   <div class="booksLine">
     <!--Livre 33-->
@@ -675,7 +673,6 @@
     </figure>
   </div>
 
-
   <div class="booksLine">
     <!--Livre 41-->
     <figure>
@@ -692,35 +689,35 @@
       </figcaption>
     </figure>
 
-    <!--Livre 42
-  <figure>
-    <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
-    <figcaption>
-      Saphia Azzeddine
-    </figcaption>
-    <figcaption>
-      Combien veux-tu m'épouser ?
-    </figcaption>
-    <figcaption>
-      17,90€
-    </figcaption>
-  </figure>
-  -->
+    <!--Livre 42-->
+    <figure>
+      <a href="https://www.amazon.fr/M%C3%A9lanie-Fran%C3%A7aise-musulmane-Melanie-Georgiades/dp/2757859080/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1560875298&sr=8-3" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/61A2pW2mDCL.jpg" alt="Mélanie, Française et musulmane" class="books" /></a>
+      <figcaption>
+        Mélanie Georgiades
+      </figcaption>
+      <figcaption>
+        Mélanie, Française et musulmane
+      </figcaption>
+      <figcaption>
+        7,00€
+      </figcaption>
+    </figure>
 
-    <!--Livre 43
-  <figure>
-    <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
-    <figcaption>
-      Saphia Azzeddine
-    </figcaption>
-    <figcaption>
-      Bilqiss
-    </figcaption>
-    <figcaption>
-      18,00€
-    </figcaption>
-  </figure>
--->
+    <!--Livre 43-->
+    <figure>
+      <a href="https://www.amazon.fr/Diams-autobiographie-Melanie-Georgiades/dp/2757835661/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1560875298&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51I%2BiF81yIL.jpg"
+          alt="Diam's, autobiographie" class="books" /></a>
+      <figcaption>
+        Mélanie Georgiades
+      </figcaption>
+      <figcaption>
+        Diam's, autobiographie
+      </figcaption>
+      <figcaption>
+        7,30€
+      </figcaption>
+    </figure>
 
     <!--Livre 44
   <figure>
@@ -734,11 +731,11 @@
     <figcaption>
       19,00€
     </figcaption>
-  </figure>
-</div>
--->
+  </figure>-->
+  </div>
 
-    <!--  <div class="booksLine">
+
+  <!--  <div class="booksLine">
 Livre 45
   <figure>
     <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
@@ -755,7 +752,7 @@ Livre 45
   </figure>
   -->
 
-    <!--Livre 46
+  <!--Livre 46
   <figure>
     <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
     <figcaption>
@@ -770,7 +767,7 @@ Livre 45
   </figure>
   -->
 
-    <!--Livre 47
+  <!--Livre 47
   <figure>
     <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
     <figcaption>
@@ -785,7 +782,7 @@ Livre 45
   </figure>
 -->
 
-    <!--Livre 48
+  <!--Livre 48
   <figure>
     <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
     <figcaption>
@@ -801,7 +798,7 @@ Livre 45
 </div>
 -->
 
-    <!--  <div class="booksLine">
+  <!--  <div class="booksLine">
 Livre 49
   <figure>
     <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
@@ -818,7 +815,7 @@ Livre 49
   </figure>
   -->
 
-    <!--Livre 50
+  <!--Livre 50
   <figure>
     <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
     <figcaption>
@@ -833,7 +830,7 @@ Livre 49
   </figure>
   -->
 
-    <!--Livre 51
+  <!--Livre 51
   <figure>
     <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
     <figcaption>
@@ -848,7 +845,7 @@ Livre 49
   </figure>
 -->
 
-    <!--Livre 52
+  <!--Livre 52
   <figure>
     <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
     <figcaption>
@@ -864,7 +861,7 @@ Livre 49
 </div>
 -->
 
-    <!--  <div class="booksLine">
+  <!--  <div class="booksLine">
 Livre 53
   <figure>
     <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
@@ -881,7 +878,7 @@ Livre 53
   </figure>
   -->
 
-    <!--Livre 54
+  <!--Livre 54
   <figure>
     <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
     <figcaption>
@@ -896,7 +893,7 @@ Livre 53
   </figure>
   -->
 
-    <!--Livre 55
+  <!--Livre 55
   <figure>
     <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
     <figcaption>
@@ -911,7 +908,7 @@ Livre 53
   </figure>
 -->
 
-    <!--Livre 56
+  <!--Livre 56
   <figure>
     <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
     <figcaption>
@@ -927,7 +924,7 @@ Livre 53
 </div>
 -->
 
-    <!--  <div class="booksLine">
+  <!--  <div class="booksLine">
 Livre 57
   <figure>
     <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
@@ -944,7 +941,7 @@ Livre 57
   </figure>
   -->
 
-    <!--Livre 58
+  <!--Livre 58
   <figure>
     <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
     <figcaption>
@@ -959,7 +956,7 @@ Livre 57
   </figure>
   -->
 
-    <!--Livre 59
+  <!--Livre 59
   <figure>
     <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
     <figcaption>
@@ -974,7 +971,7 @@ Livre 57
   </figure>
 -->
 
-    <!--Livre 60
+  <!--Livre 60
   <figure>
     <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
     <figcaption>
