--- a/autres.html
+++ b/autres.html
@@ -29,7 +29,7 @@
         Maillot Vitality blanc
       </figcaption>
       <figcaption>
-        Edition limitée
+        N'est plus disponible
       </figcaption>
       <figcaption>
         XXL
