--- a/autres.html
+++ b/autres.html
@@ -21,7 +21,7 @@
   </navbar>
 
   <div class="othersLine">
-    <!--Autres 1-->
+    <!--Autres 1
     <figure>
       <a href="https://shop.vitality.gg/products/copie-de-maillot-officiel-team-vitality-floque?variant=29051376959606" target="_blank"> <img src="https://cdn.shopify.com/s/files/1/0049/2293/3366/products/FR_Face_1024x1024.png?v=1560698170"
           alt="Vitality" class="others" /></a>
@@ -50,7 +50,7 @@
         Casquette Vitality
       </figcaption>
       <figcaption>
-        24,99€
+        17,50€ (PROMOTION)
       </figcaption>
     </figure>
 
