mise à jour prix

--- a/autres.html
+++ b/autres.html
@@ -135,7 +135,7 @@
         Blu Ray
       </figcaption>
       <figcaption>
-        14,99€
+        11,98€
       </figcaption>
     </figure>
   </div>
@@ -152,7 +152,7 @@
         Blu Ray
       </figcaption>
       <figcaption>
-        10,78€
+        10,80€
       </figcaption>
     </figure>
 
@@ -179,7 +179,7 @@
         Monopoly GoT
       </figcaption>
       <figcaption>
-        29,99€
+        34,99€
       </figcaption>
     </figure>
 
@@ -191,7 +191,7 @@
         Mug Alexa Bliss
       </figcaption>
       <figcaption>
-        18,34€
+        18,26€
       </figcaption>
       <figcaption>
         wwe.com (USA)
@@ -203,42 +203,6 @@
   <div class="othersLine">
     <!--Autres 13-->
     <figure>
-      <a href="https://shop.wwe.com/dean-ambrose-no-good-dean-15-oz.-mug/BL1018.html?dwvar_BL1018_color=No%20Color#curr=EUR&pagesize=78&start=46" target="_blank"> <img
-          src="https://shop.wwe.com/on/demandware.static/-/Sites-main/default/dwa5ac65c9/images/large/BL1018.jpg" alt="Mug Dean Ambrose" class="others" /></a>
-      <figcaption>
-        Mug Dean Ambrose
-      </figcaption>
-      <figcaption>
-        Bientôt en fin de série
-      </figcaption>
-      <figcaption>
-        5,79€
-      </figcaption>
-      <figcaption>
-        wwe.com (USA)
-      </figcaption>
-    </figure>
-
-    <!--Autres 14-->
-    <figure>
-      <a href="https://shop.wwe.com/the-shield-shield-united-15-oz.-mug/CZ9013.html?dwvar_CZ9013_color=No%20Color" target="_blank"> <img src="https://shop.wwe.com/on/demandware.static/-/Sites-main/default/dw5d0eaf31/images/large/CZ9013.jpg"
-          alt="Mug The Shield" class="others" /></a>
-      <figcaption>
-        Mug The Shield
-      </figcaption>
-      <figcaption>
-        Bientôt en fin de série
-      </figcaption>
-      <figcaption>
-        9,65€
-      </figcaption>
-      <figcaption>
-        wwe.com (USA)
-      </figcaption>
-    </figure>
-
-    <!--Autres 15-->
-    <figure>
       <a href="https://www.boutiquezerator.com/product-page/mug-zerator" target="_blank"> <img
           src="https://static.wixstatic.com/media/f9fe86_c1b2b957e346405ab7120a906830da44~mv2.jpg/v1/fill/w_498,h_664,al_c,q_85,usm_0.66_1.00_0.01/f9fe86_c1b2b957e346405ab7120a906830da44~mv2.webp" alt="Mug Zerator" class="others" /></a>
       <figcaption>
@@ -249,7 +213,7 @@
       </figcaption>
     </figure>
 
-    <!--Autres 16-->
+    <!--Autres 14-->
     <figure>
       <a href="https://www.amazon.fr/Dernier-rempart-Arnold-Schwarzenegger/dp/B00B9G1D9Q/ref=tmm_dvd_title_0?_encoding=UTF8&amp;qid=&amp;sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/712f9-DHLoL._SL1372_.jpg"
           alt="Le Dernier Rempart" class="others" /></a>
@@ -262,7 +226,33 @@
       <figcaption>
         7,50€
       </figcaption>
-    </figure>
+
+      <!--Autres 15
+    <figure>
+      <a href="https://www.boutiquezerator.com/product-page/mug-zerator" target="_blank"> <img
+          src="https://static.wixstatic.com/media/f9fe86_c1b2b957e346405ab7120a906830da44~mv2.jpg/v1/fill/w_498,h_664,al_c,q_85,usm_0.66_1.00_0.01/f9fe86_c1b2b957e346405ab7120a906830da44~mv2.webp" alt="Mug Zerator" class="others" /></a>
+      <figcaption>
+        Mug Zerator
+      </figcaption>
+      <figcaption>
+        19,90€
+      </figcaption>
+    </figure>-->
+
+      <!--Autres 16
+    <figure>
+      <a href="https://www.amazon.fr/Dernier-rempart-Arnold-Schwarzenegger/dp/B00B9G1D9Q/ref=tmm_dvd_title_0?_encoding=UTF8&amp;qid=&amp;sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/712f9-DHLoL._SL1372_.jpg"
+          alt="Le Dernier Rempart" class="others" /></a>
+      <figcaption>
+        Le Dernier Rempart
+      </figcaption>
+      <figcaption>
+        DVD
+      </figcaption>
+      <figcaption>
+        7,50€
+      </figcaption>
+    </figure>-->
   </div>
 
   <div class="othersLine">
