--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -48,10 +48,7 @@
         Précommande sur PlayStation
       </figcaption>
       <figcaption>
-        Attente d'un mail pour réduction
-      </figcaption>
-      <figcaption>
-        Sortie début septembre
+        69,99€
       </figcaption>
     </figure>
 
@@ -63,10 +60,10 @@
         Days Gone
       </figcaption>
       <figcaption>
-        48,29€ sur Amazon
+        53,30€ sur Amazon
       </figcaption>
       <figcaption>
-        46,49€ sur PlayStation
+        69,99€ sur PlayStation
       </figcaption>
     </figure>
 
@@ -81,7 +78,7 @@
         29,99€ sur Amazon
       </figcaption>
       <figcaption>
-        44,79€ sur PlayStation
+        69,99€ sur PlayStation
       </figcaption>
     </figure>
   </div>
@@ -95,10 +92,10 @@
         Shadow of the Tomb Raider
       </figcaption>
       <figcaption>
-        27,09€ sur Amazon
+        26,30€ sur Amazon
       </figcaption>
       <figcaption>
-        27,99€ sur PlayStation
+        69,99€ sur PlayStation
       </figcaption>
     </figure>
 
@@ -110,10 +107,10 @@
         God Of War
       </figcaption>
       <figcaption>
-        29,90€ sur Amazon
+        36,99€ sur Amazon
       </figcaption>
       <figcaption>
-        26,49€ sur PlayStation
+        69,99€ sur PlayStation
       </figcaption>
     </figure>
 
@@ -155,7 +152,7 @@
         Just cause 4
       </figcaption>
       <figcaption>
-        24,28€ sur Amazon
+        26,49€ sur Amazon
       </figcaption>
       <figcaption>
         69,99€ sur PlayStation
@@ -166,13 +163,13 @@
     <figure>
       <a href="#" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71qbzh%2BrMJL._SL1000_.jpg" alt="Crash Team Racing Nitro-Fueled" class="game" /></a>
       <figcaption>
-        Crash Team Racing
+        Crash Team Racing Edition Nitros Oxyde
       </figcaption>
       <figcaption>
-        39,99€ sur PlayStation
+        Edition Nitros Oxyde
       </figcaption>
       <figcaption>
-        Sortie le 21 juin
+        59,99€ sur PlayStation
       </figcaption>
     </figure>
 
