--- a/livres.html
+++ b/livres.html
@@ -720,39 +720,40 @@
     </figure>
 
     <!--Livre 44-->
-  <figure>
-    <a href="https://www.amazon.fr/Passions-Nicolas-Sarkozy/dp/B07S253JD9/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1561498848&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71lrITkBVML.jpg" alt="Passions" class="books" /></a>
-    <figcaption>
-      Nicolas Sarkozy
-    </figcaption>
-    <figcaption>
-      Passions
-    </figcaption>
-    <figcaption>
-      19,50€
-    </figcaption>
-  </figure>
+    <figure>
+      <a href="https://www.amazon.fr/Passions-Nicolas-Sarkozy/dp/B07S253JD9/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1561498848&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71lrITkBVML.jpg" alt="Passions"
+          class="books" /></a>
+      <figcaption>
+        Nicolas Sarkozy
+      </figcaption>
+      <figcaption>
+        Passions
+      </figcaption>
+      <figcaption>
+        19,50€
+      </figcaption>
+    </figure>
   </div>
 
 
-  <!--  <div class="booksLine">
-Livre 45
-  <figure>
-    <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
-        src="https://images-na.ssl-images-amazon.com/images/I/517sBNNkPyL.jpg" alt="Tendre Est La Nuit" class="books" /></a>
-    <figcaption>
-      Francis Scott Fitzgerald
-    </figcaption>
-    <figcaption>
-      Tendre est la nuit
-    </figcaption>
-    <figcaption>
-      7,20€
-    </figcaption>
-  </figure>
-  -->
+  <div class="booksLine">
+    <!--Livre 45-->
+    <figure>
+      <a href="https://www.amazon.fr/Soci%C3%A9t%C3%A9-du-Spectacle-Guy-Debord/dp/2072779405/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1561844645&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/812Cxn-3VgL.jpg"
+          alt="La Société du Spectacle" class="books" /></a>
+      <figcaption>
+        Guy Debord
+      </figcaption>
+      <figcaption>
+        La Société du Spectacle
+      </figcaption>
+      <figcaption>
+        6,80€
+      </figcaption>
+    </figure>
 
-  <!--Livre 46
+
+    <!--Livre 46
   <figure>
     <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
     <figcaption>
@@ -767,7 +768,7 @@ Livre 45
   </figure>
   -->
 
-  <!--Livre 47
+    <!--Livre 47
   <figure>
     <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
     <figcaption>
@@ -782,7 +783,7 @@ Livre 45
   </figure>
 -->
 
-  <!--Livre 48
+    <!--Livre 48
   <figure>
     <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
     <figcaption>
@@ -794,11 +795,11 @@ Livre 45
     <figcaption>
       19,00€
     </figcaption>
-  </figure>
+  </figure>-->
 </div>
--->
 
-  <!--  <div class="booksLine">
+
+    <!--  <div class="booksLine">
 Livre 49
   <figure>
     <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
@@ -815,7 +816,7 @@ Livre 49
   </figure>
   -->
 
-  <!--Livre 50
+    <!--Livre 50
   <figure>
     <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
     <figcaption>
@@ -830,7 +831,7 @@ Livre 49
   </figure>
   -->
 
-  <!--Livre 51
+    <!--Livre 51
   <figure>
     <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
     <figcaption>
@@ -845,7 +846,7 @@ Livre 49
   </figure>
 -->
 
-  <!--Livre 52
+    <!--Livre 52
   <figure>
     <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
     <figcaption>
@@ -861,7 +862,7 @@ Livre 49
 </div>
 -->
 
-  <!--  <div class="booksLine">
+    <!--  <div class="booksLine">
 Livre 53
   <figure>
     <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
@@ -878,7 +879,7 @@ Livre 53
   </figure>
   -->
 
-  <!--Livre 54
+    <!--Livre 54
   <figure>
     <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
     <figcaption>
@@ -893,7 +894,7 @@ Livre 53
   </figure>
   -->
 
-  <!--Livre 55
+    <!--Livre 55
   <figure>
     <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
     <figcaption>
@@ -908,7 +909,7 @@ Livre 53
   </figure>
 -->
 
-  <!--Livre 56
+    <!--Livre 56
   <figure>
     <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
     <figcaption>
@@ -924,7 +925,7 @@ Livre 53
 </div>
 -->
 
-  <!--  <div class="booksLine">
+    <!--  <div class="booksLine">
 Livre 57
   <figure>
     <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
@@ -941,7 +942,7 @@ Livre 57
   </figure>
   -->
 
-  <!--Livre 58
+    <!--Livre 58
   <figure>
     <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
     <figcaption>
@@ -956,7 +957,7 @@ Livre 57
   </figure>
   -->
 
-  <!--Livre 59
+    <!--Livre 59
   <figure>
     <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
     <figcaption>
@@ -971,7 +972,7 @@ Livre 57
   </figure>
 -->
 
-  <!--Livre 60
+    <!--Livre 60
   <figure>
     <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
     <figcaption>
